--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<html>
    <head>
-      <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">
+      <script type="text/javascript" src="jquery-3.2.1.js">
       </script>
 
       <script type="text/javascript" src="app.js">
