--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
    <body>
       <div id="root">
 	      <marquee id="marq" scrollamount="3" direction="up" loop="50" scrolldelay="0" onmouseover="this.stop()" onmouseout="this.start()">
-		<a href="Link"><img src="Moscow.jpg" title="Lần đầu ra nước ngoài" width="200" height="300"/> </a>
-		<a href="Link"><img src="mipt.jpg" title="Lần đầu đến trường" width="200" height="300"/> </a>
+		<img src="Moscow.jpg" title="Lần đầu ra nước ngoài" width="200" height="300"/>
+		<img src="mipt.jpg" title="Lần đầu đến trường" width="200" height="300"/> 
 	      </marquee>
 	      
       </div>
